second hot fix to stop login/registraion errors from jumping on smaller screens

--- a/Capstone.Web/Content/Site.css
+++ b/Capstone.Web/Content/Site.css
@@ -108,7 +108,7 @@ tr:nth-child(odd) {
 #loginSection {
     border-radius: 4px;
     margin: auto;
-    width: 1000px;
+    width: 1500px;
     height: 345px;
     background-color: #191923;
     border-bottom-left-radius: 4px;
@@ -122,7 +122,7 @@ tr:nth-child(odd) {
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
     text-shadow: black 1px 1px;
-    width:1000px;
+    width:1500px;
     margin:0px; 
 }
 
